--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,18 +32,22 @@ url = "2.4"
 time = "0.3.37"
 anyhow = "1.0"
 askama = "0.12.1"
-axum = { version = "0.8.1", features = ["ws"] }
-tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
+axum = { version = "0.8.1", features = ["ws", "macros"] }
+axum-extra = { version = "0.9.2", features = ["cookie"] }
 tower = "0.5.2"
-tower-http = { version = "0.6.2", features = ["fs"] }
+tower-http = { version = "0.6.2", features = ["fs", "trace", "cors"] }
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 reqwest = { version = "0.11", features = ["json"] }
 pulldown-cmark = "0.9"
 askama_escape = "0.1"
 bytes = "1.5"
+tokio-tungstenite = "0.21"
+hyper = { version = "1.2", features = ["full"] }
+http-body-util = "0.1"
 
 [dev-dependencies]
-actix-web = "4.4"
 tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
 serde_json = "1.0"
 lazy_static = "1.4"
 wiremock = "0.6.2"
+axum-test = "14.3"
